# magang-robocon

./: hasil.txt  inversekinematics.cpp
turtlesim_ws/install/: local_setup.sh  setup.sh
turtlesim_ws/install/turtle_controller/lib/turtle_controller/: turtle_move
turtlesim_ws/install/turtle_controller/share/turtle_controller/: package.sh  package.xml
turtlesim_ws/src/turtle_controller/: setup.py
